--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,31 @@
 
     <figure>
         <b>Name</b>
-        <input type="text" name = "id" SIZE = 20 maxlength = 7 VALUE = "">
+        <br></br>
+        <input type="text" name = "text" placeholder = "Enter your name">
+        <br></br>
+
+        <b>Email</b>
+        <br></br>
+        <input type="email" name = "email" placeholder = "Enter your Email">
+        <br></br>
+
+        <b>Age</b>
+        <b>(optional)</b>
+        <br></br>
+        <input type="number" name = "email" placeholder = "Age">
+        <br></br>
+
+        <b>Which option best describes your current role?</b>
+        <br></br>
+        <select name = "">
+            <option selected disabled>Select current role</option>
+            <option>Student</option>
+            <option>Full Time Job</option>
+            <option>Full Time Learner</option>
+            <option>Prefer not to say</option>
+            <option>Other</option>
+        </select>
+
     </figure>
 </main>
