--- a/Index.html
+++ b/Index.html
@@ -26,12 +26,12 @@
         <b>Age</b>
         <b>(optional)</b>
         <br></br>
-        <input type="number" name = "email" placeholder = "Age">
+        <input type="number" name = "age" placeholder = "Age">
         <br></br>
 
         <b>Which option best describes your current role?</b>
         <br></br>
-        <select name = "">
+        <select name = "role">
             <option selected disabled>Select current role</option>
             <option>Student</option>
             <option>Full Time Job</option>
@@ -39,6 +39,15 @@
             <option>Prefer not to say</option>
             <option>Other</option>
         </select>
+        <br></br>
 
+        <b>Would you recommend freeCodeCamp to a friend?</b>
+        <br></br>
+        <input type="radio" name="chk_info1" value="Definitely" checked="checked">Definitely
+        <br></br>
+        <input type="radio" name="chk_info2">Maybe
+        <br></br>
+        <input type="radio" name="chk_info3">Not sure
+        <br></br>
     </figure>
 </main>
