--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
 
         <b>Which option best describes your current role?</b>
         <br></br>
-        <select name = "role">
+        <select name = "role1">
             <option selected disabled>Select current role</option>
             <option>Student</option>
             <option>Full Time Job</option>
@@ -48,6 +48,44 @@
         <input type="radio" name="chk_info2">Maybe
         <br></br>
         <input type="radio" name="chk_info3">Not sure
+        <br></br>
+
+        <b>What is your favorite feature of freeCodeCamp?</b>
+        <br></br>
+        <select name = "role2">
+            <option selected disabled>Select an option</option>
+            <option>Challenges</option>
+            <option>Projects</option>
+            <option>Community</option>
+            <option>Open Source</option>
+        </select>
+        <br></br>
+
+        <b>What would you like to see improved? </b>
+        <b>(Check all that apply)</b>
+        <br></br>
+
+        <input type="checkbox">Front-end Projects
+        <br></br>
+        <input type="checkbox">Back-end Projects
+        <br></br>
+        <input type="checkbox">Data Visualization
+        <br></br>
+        <input type="checkbox">Challenges
+        <br></br>
+        <input type="checkbox">Open Source Community
+        <br></br>
+        <input type="checkbox">Gitter help rooms
+        <br></br>
+        <input type="checkbox">Videos
+        <br></br>
+        <input type="checkbox">City Meetups
+        <br></br>
+        <input type="checkbox">Wiki
+        <br></br>
+        <input type="checkbox">Forum
+        <br></br>
+        <input type="checkbox">Additional Courses
         <br></br>
     </figure>
 </main>
