--- a/Index.html
+++ b/Index.html
@@ -87,5 +87,9 @@
         <br></br>
         <input type="checkbox">Additional Courses
         <br></br>
+
+        <b>Any comments or suggestions?</b>
+        <br></br>
+        <textarea rows="5" cols="30" name="contents" placeholder = "Enter your comment here..."></textarea>
     </figure>
 </main>
