--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel= "stylesheet" type="text/css" href="C:\Users\bogun\Desktop\　\기타 활동\AMPM 동아리\웹스터디\웹페이지2\src\css\Web2.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web2</title>
@@ -68,8 +69,11 @@
         <input type="checkbox" name="chk_info" value="Forum">Forum<br>
         <input type="checkbox" name="chk_info" value="Additional Courses">Additional Course
         <br></br>
-        
+
         <b>Any comments or suggestions?</b><br>
         <textarea rows="5" cols="30" name="contents" placeholder = "Enter your comment here..."></textarea>
+        <br></br>
+
+        <button type="submit">Submit</button>
     </form>
 </main>
