--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 <main>
     <h1>freeCodeCamp Survey Form</h1>
     <P>Thank you for taking the time to help us improve the platform</P>
-
+    <figure id = "form_box">
     <form>
         <b>Name</b><br>
         <input type="text" name = "text" placeholder = "Enter your name">
@@ -76,4 +76,5 @@
 
         <button type="submit">Submit</button>
     </form>
+    </figure>
 </main>
