--- a/Index.html
+++ b/Index.html
@@ -15,20 +15,20 @@
     <figure id = "form_box">
     <form>
         <b id = "text">Name</b><br>
-        <input type="text" name = "text" placeholder = "Enter your name" id = "text_box">
+        <input type="text" name = "text" placeholder = "Enter your name" id = "text_box" style="font-size:16px;">
         <br></br>
 
         <b>Email</b><br>
-        <input type="email" name = "email" placeholder = "Enter your Email" id = "text_box">
+        <input type="email" name = "email" placeholder = "Enter your Email" id = "text_box" style="font-size:16px;">
         <br></br>
 
         <b>Age</b>
         <b>(optional)</b><br>
-        <input type="number" name = "age" placeholder = "Age" id = "text_box">
+        <input type="number" name = "age" placeholder = "Age" id = "text_box" style="font-size:16px;">
         <br></br>
 
         <b>Which option best describes your current role?</b><br>
-        <select name = "role1" id = "select_box">
+        <select name = "role1" id = "select_box" style="font-size:16px;">
             <option selected disabled>Select current role</option>
             <option>Student</option>
             <option>Full Time Job</option>
@@ -45,7 +45,7 @@
         <br></br>
 
         <b>What is your favorite feature of freeCodeCamp?</b><br>
-        <select name = "role2" id = "select_box">
+        <select name = "role2" id = "select_box" style="font-size:16px;">
             <option selected disabled>Select an option</option>
             <option>Challenges</option>
             <option>Projects</option>
@@ -71,7 +71,7 @@
         <br></br>
 
         <b>Any comments or suggestions?</b><br>
-        <textarea rows="5" cols="30" name="contents" placeholder = "Enter your comment here..." id = "textarea"></textarea>
+        <textarea rows="5" cols="30" name="contents" placeholder = "Enter your comment here..." id = "textarea" style="font-size:16px;"></textarea>
         <br></br>
 
         <button type="submit">Submit</button>
