--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
         <br></br>
 
         <b>Age</b>
-        <b>(optional)</b><br>
+        <b id = "option">(optional)</b><br>
         <input type="number" name = "age" placeholder = "Age" id = "text_box" style="font-size:16px;">
         <br></br>
 
@@ -55,7 +55,7 @@
         <br></br>
 
         <b>What would you like to see improved? </b>
-        <b>(Check all that apply)</b><br>
+        <b id = "option">(Check all that apply)</b><br>
 
         <input type="checkbox" name="chk_info" value="Front-end Projects">Front-end Projects<br>
         <input type="checkbox" name="chk_info" value="Back-end Projects">Back-end Projects<br>
