--- a/Index.html
+++ b/Index.html
@@ -39,9 +39,9 @@
         <br></br>
 
         <b>Would you recommend freeCodeCamp to a friend?</b><br>
-        <input type="radio" name="radio_info" value="Definitely" checked="checked">Definitely<br>
-        <input type="radio" name="radio_info" value="Maybe">Maybe<br>
-        <input type="radio" name="radio_info" value="Not sure">Not sure
+        <input type="radio" name="radio_info" value="Definitely" checked="checked"><label for="">Definitely</label><br>
+        <input type="radio" name="radio_info" value="Maybe"><label for="">Maybe</label><br>
+        <input type="radio" name="radio_info" value="Not sure"><label for="">Not sure</label>
         <br></br>
 
         <b>What is your favorite feature of freeCodeCamp?</b><br>
@@ -56,18 +56,18 @@
 
         <b>What would you like to see improved? </b>
         <b id = "option">(Check all that apply)</b><br>
-
-        <input type="checkbox" name="chk_info" value="Front-end Projects">Front-end Projects<br>
-        <input type="checkbox" name="chk_info" value="Back-end Projects">Back-end Projects<br>
-        <input type="checkbox" name="chk_info" value="Data Visualization">Data Visualization<br>
-        <input type="checkbox" name="chk_info" value="Challenges">Challenges<br>
-        <input type="checkbox" name="chk_info" value="Open Source Community">Open Source Community<br>
-        <input type="checkbox" name="chk_info" value="Gitter help rooms">Gitter help rooms<br>
-        <input type="checkbox" name="chk_info" value="Videos">Videos<br>
-        <input type="checkbox" name="chk_info" value="City Meetups">City Meetups<br>
-        <input type="checkbox" name="chk_info" value="Wiki">Wiki<br>
-        <input type="checkbox" name="chk_info" value="Forum">Forum<br>
-        <input type="checkbox" name="chk_info" value="Additional Courses">Additional Course
+        
+        <input type="checkbox" name="chk_info" value="Front-end Projects"><label for="">Front-end Projects</label><br>
+        <input type="checkbox" name="chk_info" value="Back-end Projects"><label for="">Back-end Projects</label><br>
+        <input type="checkbox" name="chk_info" value="Data Visualization"><label for="">Data Visualization</label><br>
+        <input type="checkbox" name="chk_info" value="Challenges"><label for="">Challenges</label><br>
+        <input type="checkbox" name="chk_info" value="Open Source Community"><label for="">Open Source Community</label><br>
+        <input type="checkbox" name="chk_info" value="Gitter help rooms"><label for="">Gitter help rooms</label><br>
+        <input type="checkbox" name="chk_info" value="Videos"><label for="">Videos</label><br>
+        <input type="checkbox" name="chk_info" value="City Meetups"><label for="">City Meetups</label><br>
+        <input type="checkbox" name="chk_info" value="Wiki"><label for="">Wiki</label><br>
+        <input type="checkbox" name="chk_info" value="Forum"><label for="">Forum</label><br>
+        <input type="checkbox" name="chk_info" value="Additional Courses"><label for="">Additional Course</label>
         <br></br>
 
         <b>Any comments or suggestions?</b><br>
