--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel= "stylesheet" type="text/css" href="C:\Users\bogun\Desktop\　\기타 활동\AMPM 동아리\웹스터디\웹페이지2\src\css\Web2.css">
+    <link rel= "stylesheet" type="text/css" href="src\css\Web2.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web2</title>
